syntax = "proto3";

package proto;

option go_package = "transaction";
option (gogoproto.stable_marshaler_all) = true;

import "gogo.proto";

//protoc --proto_path=$GOPATH/pkg/mod/github.com/gogo/protobuf@v1.3.2/gogoproto --proto_path=.  --gofast_out=. ./transaction.proto

message Transaction {
  bytes    FromAddr    = 1  [(gogoproto.jsontag) = "from"];
  bytes    TargetAddr  = 2  [(gogoproto.jsontag) = "target"];
  uint32   Version     = 3  [(gogoproto.jsontag) = "version"];
  bytes    ChainID     = 4  [(gogoproto.jsontag) = "chainID"];
  uint64   Nonce       = 5  [(gogoproto.jsontag) = "nonce"];
  bytes    Value       = 6  [(gogoproto.jsontag) = "value"];
  uint64   GasPrice    = 7  [(gogoproto.jsontag) = "gasPrice,omitempty"];
  uint64   GasLimit    = 8  [(gogoproto.jsontag) = "gasLimit,omitempty"];
  bytes    Data        = 9  [(gogoproto.jsontag) = "data,omitempty"];
  bytes    Signature   = 10 [(gogoproto.jsontag) = "signature,omitempty"];
  uint32   Options     = 11 [(gogoproto.jsontag) = "options,omitempty"];
}

message TransactionResult {
  bytes  TxHash       = 1  [(gogoproto.jsontag) = "txHash"];
  uint64 GasUsed      = 2  [(gogoproto.jsontag) = "gasUsed"];
  enum ResultStatus {
    OK = 0;
    Err = 1;
  }
  ResultStatus Status = 3  [(gogoproto.jsontag) = "status"];
}